--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,10 +30,12 @@
             {% endif %}
         {% endif %}
 
-        {% if site.resume == true %}
-            <li class="item">
-                <a class="link" href="{% if site.resume-external %}{{ site.resume-url }}{% else %}{{ site.url }}/{{ site.resume-url }}{% endif %}">Résumé</a>
-            </li>
+        {% if site.contact == true %}
+            {% if page.title != "Contact" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/contact">Contact</a>
+                </li>
+            {% endif %}
         {% endif %}
     </ul>
 </nav>
